--- a/src/my-app/BookDisplay.css
+++ b/src/my-app/BookDisplay.css
@@ -1,12 +1,14 @@
 .card {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
-    width: 40%;
-    
-  }
-  
-
-  
-  .container {
+    margin: 0% 20% 0% 20%;
+    background-color: rgb(4, 41, 82);
+    color: white;
+    /* width: 40%; */
+}
+.container {
     padding: 2px 16px;
-  }
+}
+img {
+    width: 500px;
+}
